# surge

./: CMakeLists.txt  build-linux.sh
cmake/: LibMidiFile.cmake  Surge.cmake  Vstgui.cmake
src/common/: SurgeSynthesizer.cpp
src/common/gui/: SurgeGUIEditor.cpp
src/lv2/: AllLv2.h  SurgeLv2Export.cpp  SurgeLv2Ui.cpp  SurgeLv2Ui.h  SurgeLv2Util.cpp  SurgeLv2Util.h  SurgeLv2Vstgui.cpp  SurgeLv2Vstgui.h  SurgeLv2Wrapper.cpp  SurgeLv2Wrapper.h
